Fix z-index

--- a/public/styles-alt.css
+++ b/public/styles-alt.css
@@ -492,7 +492,7 @@ aside a:hover {
 
 /* -------------------------------------------------------- */
 /* SCROLLBAR STYLING */
-/* -------------------------------------------------------- */
+/* -------------------------------------------------s------- */
 
 /* Firefox */
 * {
@@ -677,7 +677,7 @@ nav {
     color: var(--font-on-accent);
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     margin-bottom: 20px;
 }
 nav > button {
